tests/errors/propagate-error.au
func f(a, b) {
    return a + b;
}

func g(a, b) {
    return f(a, b);
}
g("a", 1);